<resources>
    <!--Common string resources-->
    <string name="app_name">ProAct</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="company_surname">Фамилия/Компания</string>
    <string name="middlename">Отчество</string>
    <string name="spec">Направление</string>
    <string name="group_number">Номер группы</string>
    <string name="phone">Телефон</string>
    <string name="about">О себе</string>

    <string name="free">Свободно</string>

    <string name="prev">Назад</string>
    <string name="next">Далее</string>
    <string name="done">Готово</string>

    <string name="emailinput_error">Введите почту</string>
    <string name="passinput_error">Введите пароль</string>

    <string name="emailinputlayout_hint">Почта</string>
    <string name="passinputlayout_hint">Пароль</string>

    <string name="selected_dot_description">selected dot</string>
    <string name="dot_description">dot</string>
    <!--LogScreen string resources-->

    <string name="logscreen_entry_button">Войти</string>
    <string name="logscreen_register_button">Зарегистрироваться</string>

    <string name="logo_text">Портал подбора \nстуденческих проектов</string>
    <string name="auth_text">Войти с помощью</string>

    <string name="polytech_logo">Логотип</string>
    <string name="google_logo">Google logo</string>
    <string name="vk_logo">VKontakte logo</string>
    <string name="yandex_logo">Yandex logo</string>

    <string name="logscreen_login_error">Неверная почта или пароль</string>
    <string name="email_regex_error">Почта должна быть действительной</string>

    <!--Role fragment string resources-->
    <string name="role_title">Кто вы?</string>
    <string name="customer_role">Заказчик/Куратор</string>
    <string name="worker_role">Студент</string>

    <!--register step two fragment resources-->
    <string name="email_exist">Пользователь с такой почтой уже существует</string>


    <!--register step three resources-->
    <string name="optional_helper_text">Не обязательно</string>
    <string name="nameinput_error">Введите имя</string>
    <string name="surnameinput_error">Введите фамилию</string>
    <string name="surnameinput_customer_error">Введите фамилию или название компании</string>
    <string name="specinput_error">Введите специализацию</string>
    <string name="groupnumberinput_error">Введите номер группы</string>

    <!--register step four resources-->
    <string name="register_error">Не удалось зарегистрироваться, проверьте введённые данные</string>

    <!--main menu string resources-->
    <string name="all_projects">Все проекты</string>
    <string name="my_projects">Мои проекты</string>

    <!--top menu strings-->
    <string name="log_out">Выйти</string>
    <string name="my_profile">Мой профиль</string>

    <!--main navigation labels-->
    <string name="all_projects_label">Все проекты</string>
    <string name="my_projects_label">Мои проекты</string>

    <!--project strings-->
    <string name="project_curator">Куратор: %s</string>
    <string name="project_quantity">Свободных мест: %d/%d</string>
    <string name="project_deadline">Запись до: %s</string>
    <string name="project_finish_date">Конец проекта: %s</string>
    <string name="project_status">Статус: %s</string>
    <string name="project_about_short">%s…</string>
    <string name="project_full_about">Описание: %s</string>
    <string name="sign_button">Записаться</string>
    <string name="team_number">Команда #%d</string>
    <string name="member_text">%s: %s</string>
    <string name="project_request_error">Не удалось записаться на проект</string>
    <string name="project_request_created">Заявка на проект подана</string>
    <string name="project_request_exist">Заявка уже подана</string>
    <string name="profile">Профиль</string>
    <string name="project_requests">Заявки на проект</string>

    <!--add projects screen strings-->
    <string name="project_title_hint">Название проекта</string>
    <string name="project_deadline_hint">Запись до</string>
    <string name="project_finish_date_hint">Дата окончания</string>
    <string name="project_specs_hint">Кто вам нужен*</string>
    <string name="project_specs_helper">Разделяйте запятой</string>
    <string name="project_teams_hint">Количество команд</string>
    <string name="project_about_hint">О проекте</string>
    <string name="project_tag_text">Добавить тег</string>
    <string name="project_add_button">Добавить проект</string>
    <string name="project_added_text">Проект создан и отправлен на рассмотрение</string>
    <string name="project_added_error">Не удалось создать проект</string>

    <!--add projcets screen error strings-->
    <string name="project_title_error">Добавьте название проекта</string>
    <string name="project_deadline_error">Добавьте дату последнего дня записи</string>
    <string name="poject_finish_date_error">Добавьте дату окончания проекта</string>
    <string name="project_specs_error">Добавьте необходимые Вам специализации</string>
    <string name="project_teams_error">Укажите количество команд</string>
    <string name="project_teams_helper">Не больше 10</string>
    <string name="project_teams_number_error">Количество команд не может равняться 0</string>
    <string name="project_about_error">Добавьте описание</string>
    <string name="poject_empty_tags_error">Добавьте хотя бы 1 тег</string>
    <string name="project_specs_overflow_error">Количество специализаций должно быть меньше 10</string>
    <string name="project_teams_overflow_error">Количество команд должно быть меньше 10</string>
    <string name="project_tags_error">Количество тегов не может быть больше 7</string>
    <string name="project_dates_error">Окончание проекта должно быть не раньше записи</string>

    <!--profile activity strings-->
    <string name="profile_full_name">%s %s %s</string>
    <string name="profile_email">Почта: %s</string>
    <string name="profile_phone">Телефон: %s</string>
    <string name="profile_group">Группа: %s</string>
    <string name="profile_about">О себе: %s</string>
    <string name="active_projects">Активные</string>
    <string name="archive_projects">Архив</string>
    <string name="info">Инфо</string>

    <!--requetsts string-->
    <string name="request_role">Роль: %s</string>
    <string name="request_status">Статус: %s</string>
    <string name="request_project">Проект: %s</string>
    <string name="request_accept_button">Принять</string>
    <string name="request_decilne_button">Отклонить</string>
    <string name="no_requests_text">Заявок на проект пока нет</string>

    <!--tab titles strings-->
    <string name="tab_active">Активные</string>
    <string name="tab_finished">Архив</string>
    <string name="tab_requests">Заявки</string>

    <!--dialogs strings-->
    <string name="ok_button">ОК</string>
    <string name="cancel_button">Отменить</string>
    <string name="tags_dialog_title">Выберите теги для проекта</string>

    <!--no items strings-->
    <string name="no_projects">Проектов пока нет</string>

    <!--status strings-->
    <string name="admin_review">На рассмотрении андминистратора</string>
    <string name="running">Выпоняется</string>
    <string name="closed">Закрыт</string>
    <string name="project_denied">Не прошёл модерацию</string>

    <!--worker application strings-->
    <string name="on_review">На рассмотрении</string>
    <string name="accepted">Принято</string>
    <string name="denied">Отказано</string>

    <!--TagProjectsActivity string-->
    <string name="tag_toolbar_title">Выбранный тег: %s</string>

</resources>
