<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/largePadding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rgThreeNameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:errorEnabled="false"
        app:helperText="@string/optional_helper_text"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rgThreeSurnameInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rgThreeNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rgThreeSurnameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_surname"
        app:errorEnabled="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/rgThreeNameInput"
        app:layout_constraintBottom_toTopOf="@id/rgThreeMiddlenameInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rgThreeSurnameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rgThreeMiddlenameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/optional_helper_text"
        android:hint="@string/middlename"
        android:layout_marginBottom="@dimen/mediumPadding"
        app:errorEnabled="false"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/rgThreeSurnameInput"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rgThreeMiddlenameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/prevButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/prevButton"
        app:layout_constraintTop_toTopOf="@id/prevButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/ic_dot"
            android:layout_marginEnd="@dimen/smallPadding"
            android:contentDescription="@string/dot_description" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/ic_dot"
            android:layout_marginEnd="@dimen/smallPadding"
            android:contentDescription="@string/dot_description" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/ic_selected_dot"
            android:layout_marginEnd="@dimen/smallPadding"
            android:contentDescription="@string/selected_dot_description" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/ic_dot"
            android:layout_marginEnd="@dimen/smallPadding"
            android:contentDescription="@string/dot_description" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>