<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/largePadding">

    <TextView
        android:id="@+id/role_title"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumPadding"
        android:text="@string/role_title"
        app:layout_constraintBottom_toTopOf="@id/customerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/customerButton"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/ic_customer"
        android:button="null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/workerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/workerButton"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/ic_worker"
        android:button="null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/customerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_role"
        app:layout_constraintEnd_toEndOf="@id/customerButton"
        app:layout_constraintStart_toStartOf="@id/customerButton"
        app:layout_constraintTop_toBottomOf="@id/customerButton" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker_role"
        app:layout_constraintEnd_toEndOf="@id/workerButton"
        app:layout_constraintStart_toStartOf="@id/workerButton"
        app:layout_constraintTop_toBottomOf="@id/workerButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/prev_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:icon="@drawable/ic_prev_arrow"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:icon="@drawable/ic_next_arrow"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>