<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/largePadding">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logscrLogoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumPadding"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/logscrEmailInput"
        app:layout_constraintEnd_toEndOf="@id/logscrEmailInput"
        app:layout_constraintStart_toStartOf="@id/logscrEmailInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="@dimen/smallPadding"
            android:adjustViewBounds="true"
            android:contentDescription="@string/polytech_logo"
            android:src="@drawable/polytech_logo" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_text"
            android:textSize="25sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logscrEmailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumPadding"
        android:hint="@string/emailinputlayout_hint"
        app:layout_constraintBottom_toTopOf="@id/logscrPassInput"
        app:layout_constraintTop_toBottomOf="@id/logscrLogoLayout"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logscrEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logscrPassInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumPadding"
        android:hint="@string/passinputlayout_hint"
        app:layout_constraintBottom_toTopOf="@id/logscrEntryButton"
        app:layout_constraintTop_toBottomOf="@id/logscrEmailInput"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logscrPassEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logscrEntryButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumPadding"
        android:background="@color/colorAccent"
        android:text="@string/logscreen_entry_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorPrimary"
        app:cornerRadius="5dp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/logscrRegisterButton"
        app:layout_constraintTop_toBottomOf="@id/logscrPassInput"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logscrRegisterButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallPadding"
        android:text="@string/logscreen_register_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logscrEntryButton"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>