<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/mediumPadding"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorCard"
    app:cardCornerRadius="@dimen/projectCardCornerRadius"
    app:contentPadding="@dimen/mediumPadding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/requestWorkerName"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/requestProfileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Peter Peterov" />


        <TextView
            android:id="@+id/requestTeamText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestWorkerName"
            tools:text="Team #1" />

        <TextView
            android:id="@+id/requestRoleText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestTeamText"
            tools:text="Android-developer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestProfileButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/requestWorkerName"
            app:layout_constraintBottom_toBottomOf="@id/requestWorkerName"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestAcceptButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_accept_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:visibility="visible"
            android:layout_marginTop="@dimen/smallPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestRoleText"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestDeclineButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/request_decilne_button"
            app:layout_constraintEnd_toStartOf="@id/requestAcceptButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/smallPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>